Closed
Bug 450740
Opened 17 years ago
Closed 17 years ago
Mark as read still can't be disabled when "immediately on display" is chosen
Categories
(MailNews Core :: Networking: IMAP, defect)
MailNews Core
Networking: IMAP
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9.1a2
People
(Reporter: christopher.rodgers, Assigned: mkmelin)
References
()
Details
Attachments
(1 file)
|
1.69 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.0; WOW64; SLCC1; .NET CLR 2.0.50727; .NET CLR 3.0.04506; InfoPath.2; .NET CLR 1.1.4322; .NET CLR 3.5.21022)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1a2pre) Gecko/20080814031842 Shredder/3.0b1pre
The option to not automatically mark messages as "read" on an IMAP account does not work.
This bug causes data loss (of the "read" flags).
Reproducible: Always
Steps to Reproduce:
1. Delete profile folder.
2. Start thunderbird.
3. Add IMAP account.
4. Choose Tools...Options...Advanced
5. Disable "Automatically mark messages as read"
6. Click OK
7. Choose messages from the IMAP account - they will incorrectly be marked as read.
The screenshot and network capture at http://users.fmrib.ox.ac.uk/~crodgers/ThunderbirdBug/ show this.
The problem seems to be that Thunderbird is sending an IMAP FETCH command when it should send a PEEK.
My previous patch to bug 297534 tackled that problem.
Comment 1•17 years ago
|
||
IMAP problem.
And, FWIW, you mean it's sending a FETCH (BODY[]) where you want a FETCH (BODY.PEEK[]).
Assignee: nobody → bienvenu
Component: Mail Window Front End → Networking: IMAP
Product: Thunderbird → Core
QA Contact: front-end → networking.imap
Version: unspecified → Trunk
| Assignee | ||
Comment 2•17 years ago
|
||
Ah yes, I see the problem now.
Assignee: bienvenu → mkmelin+mozilla
OS: Windows Vista → All
Hardware: PC → All
Summary: Mark as read feature still broken (i.e. bug 297534 not resolved) → Mark as read still can't be disabled when "immediately on display" is chosen
| Assignee | ||
Updated•17 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 3•17 years ago
|
||
Mistake in the peek vs. fetch logic. If auto-marking is off, should always peek.
Attachment #333961 -
Flags: superreview?(bienvenu)
Attachment #333961 -
Flags: review?(bienvenu)
Comment 4•17 years ago
|
||
Comment on attachment 333961 [details] [diff] [review]
proposed fix
that's right, thx, Magnus.
Attachment #333961 -
Flags: superreview?(bienvenu)
Attachment #333961 -
Flags: superreview+
Attachment #333961 -
Flags: review?(bienvenu)
Attachment #333961 -
Flags: review+
| Assignee | ||
Comment 5•17 years ago
|
||
changeset: 110:e7459764ea53
http://hg.mozilla.org/comm-central/index.cgi/rev/e7459764ea53
->FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1
| Assignee | ||
Updated•17 years ago
|
Target Milestone: mozilla1.9.1 → mozilla1.9.1a2
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•