Bug 450740: Mark as read still can't be disabled when "immediately on display" is chosen. r+sr=bienvenu